--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,6 @@ jobs:
           OS: Win_64
           MODEL: 64
           ARCH: x64
-        x86-OMF:
-          OS: Win_32
-          MODEL: 32
-          ARCH: x86
     steps:
       - template: .azure-pipelines/windows.yml
 
@@ -36,10 +32,6 @@ jobs:
           OS: Win_64
           MODEL: 64
           ARCH: x64
-        x86-OMF:
-          OS: Win_32
-          MODEL: 32
-          ARCH: x86
     steps:
       - template: .azure-pipelines/windows.yml
       - template: .azure-pipelines/windows-artifact.yml
@@ -63,7 +55,7 @@ jobs:
         # x64 only because 32bit causes weird linker errors for several tests???
         # x86-OMF:
         #   OS: Win_32
-        #   MODEL: 32
+        #   MODEL: 32omf
         #   ARCH: x86
     steps:
       - template: .azure-pipelines/windows.yml
