--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,11 +81,11 @@ jobs:
           CONFIGURATION: Debug
         x86-mscoff:
           OS: Win_32
-          MODEL: 32mscoff
+          MODEL: 32
           ARCH: x86
         x86-mscoff_MinGW:
           OS: Win_32
-          MODEL: 32mscoff
+          MODEL: 32
           ARCH: x86
           C_RUNTIME: mingw
     steps:
