--- a/ini/windows/bin/sc.ini
+++ b/ini/windows/bin/sc.ini
@@ -7,14 +7,15 @@ version=7.51 Build 020
 DFLAGS="-I%@P%\..\..\src\phobos" "-I%@P%\..\..\src\druntime\import"
 
 ; optlink only reads from the Environment section so we need this redundancy
-; from the Environment32 section (bugzilla 11302)
+; from the Environment32omf section (bugzilla 11302)
 LIB="%@P%\..\lib"
-
 
 [Environment32]
+LIB=%@P%\..\lib32mscoff
+
+[Environment32omf]
 LIB="%@P%\..\lib"
 LINKCMD=%@P%\optlink.exe
-
 
 [Environment64]
 LIB=%@P%\..\lib64
