--- a/.azure-pipelines/windows-visual-studio.yml
+++ b/.azure-pipelines/windows-visual-studio.yml
@@ -1,7 +1,7 @@
 steps:
   - script: |
       :: Use Windows CRLF line endings for checked-out text files
-      git config --global core.autocrlf true
+      git config --global core.autocrlf false
       set
     displayName: Print environment variables
   - checkout: self
