--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -77,6 +77,9 @@ linux_task:
         HOST_DMD: dmd-2.079.0
       - TASK_NAME_SUFFIX: x64, LDC
         HOST_DC: ldc #TODO: Update to HOST_DMD when support for HOST_DC is removed
+        ENABLE_SANITIZERS: address
+        # FIXME: Compiler has a bunch of memory leaks, ignore them for now
+        ASAN_OPTIONS: detect_leaks=0
       - TASK_NAME_SUFFIX: x64, GDC
         HOST_DMD: gdmd-9
   << : *COMMON_STEPS_TEMPLATE
