ci(pre-commit): add end-of-file-fixer hook
Signed-off-by: Luís Ferreira <contact@lsferreira.net>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,12 @@ repos:
         ^test/runnable/extra-files/.*$|
         ^test/compilable/extra-files/.*$|
       )$
+  - id: end-of-file-fixer
+    exclude: >
+      (?x)^(
+        ^test/runnable/extra-files/.*$|
+        ^test/compilable/extra-files/.*$|
+      )$
   - id: check-merge-conflict
   - id: check-added-large-files
   - id: detect-private-key
