--- a/.github/workflows/pre_commit.yml
+++ b/.github/workflows/pre_commit.yml
@@ -4,9 +4,11 @@ on:
   pull_request:
     branches:
       - master
+      - stable
   push:
     branches:
       - master
+      - stable
   workflow_dispatch:
 
 jobs:
