CirrusCI: Temporarily use ldc instead of dmd for MacOs >= 12
DMD releases cannot compile for XCode >= 13.3 because of issue 22942.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -93,6 +93,8 @@ macos12_task:
     OS: osx
     # 12 CPU cores and 24 GB of memory are available
     N: 12
+    # FIXME: Temporarily use LDC until a release with a fix for issue 22942 is available (probably 2.101)
+    HOST_DMD: ldc
     matrix:
       - TASK_NAME_SUFFIX: DMD (latest)
       - TASK_NAME_SUFFIX: DMD (coverage)
