Clean up win64.mak
* Remove unused variables.
* Default to a matching MSVC cl.exe in PATH instead of an ancient
  Visual Studio 2010 installation.
* Remove explicit 32-bit recipes, requiring a separate make
  invocation.

--- a/.github/workflows/cxx.yml
+++ b/.github/workflows/cxx.yml
@@ -275,7 +275,7 @@ jobs:
         # but providing all three to avoid surprise for future contributors
         # Those should really be in the path, though.
         cd druntime
-        make -f win64.mak CC=cl.exe LD=link "AR=$VISUAL_STUDIO_LIB_NOT_DM"
+        make -f win64.mak
         if [ $? -ne 0 ]; then return 1; fi
         cd ../phobos/
         make -f win64.mak CC=cl.exe LD=link "AR=$VISUAL_STUDIO_LIB_NOT_DM"
