--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.[oa]
 *.deps
 .B*
-test/test_results
-test/trace.def
-test/trace.log
+/compiler/test/test_results
+/compiler/test/trace.def
+/compiler/test/trace.log
 generated/
 *.obj
 *.map
@@ -17,9 +17,9 @@ dub.selections.json
 # Visual Studio files
 *.exe
 *.pdb
-src/vcbuild/Win32
-src/vcbuild/x64
-src/vcbuild/.vs
+/compiler/src/vcbuild/Win32
+/compiler/src/vcbuild/x64
+/compiler/src/vcbuild/.vs
 *.ncb
 *.suo
 *.sdf
@@ -35,13 +35,13 @@ xcuserdata/
 dmd.xcodeproj/
 
 # Output files
-src/*.bak
-src/*.lib
-src/*.lst
+/compiler/src/*.bak
+/compiler/src/*.lib
+/compiler/src/*.lst
 tags
 
 # OSX
-src/optabgen.dSYM/
+/compiler/src/optabgen.dSYM/
 
 # GCov
 *.gcno
