Disable fail-fast for nightly builds
So that one job failing doesn't break all nightlies.

--- a/.github/workflows/nightlies.yml
+++ b/.github/workflows/nightlies.yml
@@ -30,6 +30,8 @@ jobs:
     needs:
       - build-all-releases
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
 
     steps:
       #################################################################
