--- a/.github/workflows/runnable_cxx.yml
+++ b/.github/workflows/runnable_cxx.yml
@@ -7,7 +7,8 @@
 # such as newer C++ standards (C++17, C++20, etc...).
 #
 # This is the reason why we have this action: we have full control over the toolchain,
-# and it's cross platform.
+# and it is cross platform. The supported platforms are whatever Github Actions support,
+# which is usually whatever the vendor (Canonical, Apple, Microsoft) supports.
 #
 # Notes:
 # - Some patterns used here have been developed through a lot of trial and error
@@ -56,17 +57,13 @@ jobs:
       # very few PRs actually benefit from this.
       fail-fast: false
       matrix:
-        # Mac OS 11, Ubuntu 18.04 in order to support older LLVM / GCC
-        # Ubuntu 20.04 in order to support newer LLVM / GCC
-        os: [ macOS-11, ubuntu-18.04, ubuntu-20.04, windows-2019 ]
+        os: [ macOS-11, ubuntu-20.04, windows-2019 ]
 
         target: [
-          # Versions of clang earlier than 8 are not available on 18.04
-          # Versions of clang earlier than 11 are not available on 20.04
+          # Versions of clang earlier than 11 are not available on 20.04, but are on macOS-11
           clang-13.0.0, clang-12.0.0, clang-11.0.0, clang-10.0.0, clang-9.0.0, clang-8.0.0,
-          # For g++, we test all major's latest minor releases since the
-          # introduction of ABI the dual ABI (v5.1, 2015-04-15)
-          g++-11, g++-10, g++-9, g++-8, g++-7, g++-6, g++-5,
+        # For g++, we test the oldest compiler on Ubuntu 20.04, which is GCC-9
+          g++-11, g++-10, g++-9,
           # Finally, we test MSVC 2013 - 2019
           msvc-2019, msvc-2017, msvc-2015, msvc-2013
         ]
@@ -75,37 +72,14 @@ jobs:
         # Note: Pattern matching is not supported so this list is quite long,
         # and brittle, as changing an msvc entry would break on OSX, for example.
         exclude:
-          # Ubuntu supports clang and g++
-          - { os: ubuntu-18.04, target: msvc-2019 }
-          - { os: ubuntu-18.04, target: msvc-2017 }
-          - { os: ubuntu-18.04, target: msvc-2015 }
-          - { os: ubuntu-18.04, target: msvc-2013 }
-          - { os: ubuntu-20.04, target: msvc-2019 }
-          - { os: ubuntu-20.04, target: msvc-2017 }
-          - { os: ubuntu-20.04, target: msvc-2015 }
-          - { os: ubuntu-20.04, target: msvc-2013 }
-          # 18.04 only has g++-5 through to 9, and clang-8.0.0 through to 10.0.0
-          - { os: ubuntu-18.04, target: clang-13.0.0 }
-          - { os: ubuntu-18.04, target: clang-12.0.0 }
-          - { os: ubuntu-18.04, target: clang-11.0.0 }
-          - { os: ubuntu-18.04, target: g++-11 }
-          - { os: ubuntu-18.04, target: g++-10 }
           # 20.04 only has g++-9 through to 11, and clang-11.0.0 through to 13.0.0
           - { os: ubuntu-20.04, target: clang-10.0.0 }
           - { os: ubuntu-20.04, target: clang-9.0.0 }
           - { os: ubuntu-20.04, target: clang-8.0.0 }
-          - { os: ubuntu-20.04, target: g++-8 }
-          - { os: ubuntu-20.04, target: g++-7 }
-          - { os: ubuntu-20.04, target: g++-6 }
-          - { os: ubuntu-20.04, target: g++-5 }
           # OSX only supports clang
           - { os: macOS-11, target: g++-11 }
           - { os: macOS-11, target: g++-10 }
           - { os: macOS-11, target: g++-9 }
-          - { os: macOS-11, target: g++-8 }
-          - { os: macOS-11, target: g++-7 }
-          - { os: macOS-11, target: g++-6 }
-          - { os: macOS-11, target: g++-5 }
           - { os: macOS-11, target: msvc-2019 }
           - { os: macOS-11, target: msvc-2017 }
           - { os: macOS-11, target: msvc-2015 }
@@ -114,10 +88,6 @@ jobs:
           - { os: windows-2019, target: g++-11 }
           - { os: windows-2019, target: g++-10 }
           - { os: windows-2019, target: g++-9 }
-          - { os: windows-2019, target: g++-8 }
-          - { os: windows-2019, target: g++-7 }
-          - { os: windows-2019, target: g++-6 }
-          - { os: windows-2019, target: g++-5 }
 
           # TODO: Implement support for clang and MSVC2017 on Windows
           # Currently those are still being run by the auto-tester
@@ -150,19 +120,14 @@ jobs:
           - { target: g++-11, compiler: g++, cxx-version: 11.2.0, major: 11 }
           - { target: g++-10, compiler: g++, cxx-version: 10.3.0, major: 10 }
           - { target: g++-9, compiler: g++, cxx-version: 9.4.0, major: 9 }
-          - { target: g++-8, compiler: g++, cxx-version: 8.5.0, major: 8 }
-          - { target: g++-7, compiler: g++, cxx-version: 7.5.0, major: 7 }
-          - { target: g++-6, compiler: g++, cxx-version: 6.5.0, major: 6 }
-          - { target: g++-5, compiler: g++, cxx-version: 5.5.0, major: 5 }
           # Platform boilerplate
-          - { os: ubuntu-18.04, arch: x86_64-linux-gnu-ubuntu-18.04 }
           - { os: ubuntu-20.04, arch: x86_64-linux-gnu-ubuntu-20.04 }
           - { os: macOS-11,  arch: x86_64-apple-darwin }
           # Clang 9.0.0 have a different arch for OSX
           - { os: macOS-11, target: clang-9.0.0, arch: x86_64-darwin-apple }
           # Those targets will generate artifacts that can be used by other testers
           - { storeArtifacts: false }
-          - { os: ubuntu-18.04, target: g++-9,       storeArtifacts: true }
+          - { os: ubuntu-20.04, target: g++-9,    storeArtifacts: true }
           - { os: macOS-11,  target: clang-9.0.0, storeArtifacts: true }
           #- { os: windows-2019, target: msvc-2019,   storeArtifacts: true }
 
